Fiat Wallet feature

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NUBAN_API_KEY=
+
+BULKSMSNIGERIA_API_KEY=
+BULKSMSNIGERIA_SENDER_ID=CoinageNG
+BULKSMSNIGERIA_DND=3
+
+CRYPTO_PROCESSING_TOKEN=
+CRYPTO_PROCESSING_BASE_URI=https://cryptoprocessing.io/api/v1
+
+WALLETS_AFRICA_PUBLIC_KEY=
+WALLETS_AFRICA_SECRET_KEY=
+WALLETS_AFRICA_BASE_URI=https://api.wallets.africa
